<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>infobot_teleop</name>
  <version>2.1.5</version>
  <description>
    Teleoperation node using keyboard for TurtleBot3.
  </description>
  <maintainer email="hamid.ebadi@gmail.com">Hamid Ebadi</maintainer>
  <author email="hamid.ebadi@gmail.com">Hamid Ebadi</author>
  <license>Apache-2.0</license>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
